[gd_scene load_steps=3 format=3 uid="uid://b0gi877f0tfso"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_xqstr"]
[ext_resource type="Theme" uid="uid://d15rsb5jyxtgp" path="res://GUI/default_theme.tres" id="2_m1x18"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xqstr")
bus_name = "Master"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 2

[node name="resume" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_m1x18")
action_mode = 0
text = "Resume"

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer"]
process_mode = 3
clip_contents = true
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 10
ticks_on_borders = true

[node name="quit" type="Button" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_m1x18")
text = "Quit"
autowrap_mode = 2
clip_text = true

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
